--- a/_layouts/casestudy.html
+++ b/_layouts/casestudy.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Guided Fantasy : Web home of abdul raoof</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
-</head>
-<body>
-	<div class="container">
-		<header>
-		</header>
-			{{content}}
-			{% include footer.html %}
-	</div>
-	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
-</body>
-</html>
+---
+layout: default
+---
+
+<section>
+	<p class="navigation"><a href="{{site.baseurl}}/works"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back to Works</a></p>
+</section>
+
+{{ content }}
+
+<section class="article-end"></section>
+<h2>Other Works</h2>
+<section class="works {% if page.url == '/works/campaigns/' %}hide{% endif %}">
+    <h3>Campaigns for Exotel</h3>
+    <p class="lead">Empower the customers to drive growth and engagement.</p>
+    <p><a href="{{site.baseurl}}/works/campaigns/">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+</section>
+<section class="works {% if page.url == '/works/console/' %}hide{% endif %}">
+    <h3>Console for Exotel</h3>
+    <p class="lead">Better tool for customer support operations.</p>
+    <p><a href="{{site.baseurl}}/works/console/">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+</section> 	
+<section class="works {% if page.url == '/works/analytics/' %}hide{% endif %}">
+	<h3>Exotel Call Analytics</h3>
+	<p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
+	<p><a href="{{site.baseurl}}/works/analytics/">Read More <i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+</section>
