--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guided Fantasy : Web home of abdul raoof</title>
+	<title>{{ page.title }} {% if page.url != '/' %}| {% endif %}Web home of Abdul Raoof</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css">
@@ -18,6 +18,7 @@
 		</article>
 		{% include footer.html %}
 	</div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css">
 	<script   src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
 </body>
