--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guided Fantasy : Web home of abdul raoof</title>
+	<title>{{ page.title}} | Journal</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css">
@@ -13,12 +13,15 @@
 			<a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/logo/logo.png" id="logo"></a>
 			{% include nav.html %}
 		</header>
+        <section>
+           <p class="navigation"><a href="{{site.baseurl}}/journal/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back to Journal</a></p>
+        </section>
 		<article role="main">
 			{{content}}
 		</article>
 		{% include footer.html %}
 	</div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css">
 	<script   src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<!--	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>-->
 </body>
 </html>
