added works to the navigation area

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav role="navigation">
     <ul>
 		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}selected{% endif %}">Home</a></li>
+        <li><a href="{{site.baseurl}}/works/" class="{% if page.url == '/works/' %}selected{% endif %}">Works</a></li>
  		<li><a href="{{site.baseurl}}/journal/" class="{% if page.url == '/journal/' %}selected{% endif %}">Journal</a></li> 
         <li><a href="{{site.baseurl}}/quotes" class="{% if page.url == '/quotes/' %}selected{% endif %}">Quotes</a></li>
 		<li><a href="{{site.baseurl}}/bio" class="{% if page.url == '/bio/' %}selected{% endif %}">Bio</a></li>
