--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>{{ page.title }} {% if page.url != '/' %}| {% endif %}Web home of Abdul Raoof</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/main.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css">
 </head>
+
 <body>
 	<div class="container">
 		<header>
 			{% include nav.html %}
 		</header>
-		<article role="main">
+		<div class="content" role="main">
 			{{content}}
-		</article>
+		</div>
 		{% include footer.html %}
+
 	</div>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css">
-	<script   src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+		type="text/css">
+	<script src="http://code.jquery.com/jquery-3.1.1.min.js"
+		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="{{site.baseurl}}/script/main.js"></script>
 </body>
+
 </html>
