--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -6,61 +6,130 @@ $pad: 20px;
   box-sizing: border-box;
 }
 
-.grid {
-background: white;
-margin: 0 0 $pad 0;
-  &:after {
-  content: "";
-  display: table;
-  clear: both;
-  }
-}
+// .grid {
+// background: white;
+// margin: 0 0 $pad 0;
+//   &:after {
+//   content: "";
+//   display: table;
+//   clear: both;
+//   }
+// }
 
-[class*='col-'] {
-  float: left;
-  padding-right: $pad;
-  .grid &:last-of-type {
-    padding-right: 0;
-  }
-}
+// [class*='col-'] {
+//   float: left;
+//   padding-right: $pad;
+//   .grid &:last-of-type {
+//     padding-right: 0;
+//   }
+// }
 
 
-.col-2-3 {
-  width: 66.66%;
-}
+// .col-2-3 {
+//   width: 66.66%;
+// }
 
-.col-1-3 {
-  width: 33.33%;
-}
+// .col-1-3 {
+//   width: 33.33%;
+// }
 
-.col-1-2 {
-  width: 50%;
-}
+// .col-1-2 {
+//   width: 50%;
+// }
 
-.col-1-4 {
-  width: 25%;
-}
+// .col-1-4 {
+//   width: 25%;
+// }
 
-.col-1-8 {
-  width: 12.5%;
-}
+// .col-1-8 {
+//   width: 12.5%;
+// }
 
 /* Opt-in outside padding */
-.grid-pad {
-  padding: $pad 0 $pad $pad;
-  [class*='col-']:last-of-type {
-    padding-right: $pad;
-  }
+// .grid-pad {
+//   padding: $pad 0 $pad $pad;
+
+//   [class*='col-']:last-of-type {
+//     padding-right: $pad;
+//   }
+// }
+
+// .container {
+//   width: 50%;
+//   margin: 0 auto;
+//   max-width: 720px; 
+//   @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
+//     width: 90%;
+//   }
+//   @media only screen and (min-device-width : 800px) and (max-device-width : 1024px) {
+//     width: 70%;
+//   }
+// }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
+}
+
+.col-1 {
+  grid-column: span 1;
+}
+
+.col-2 {
+  grid-column: span 2;
+}
+
+.col-3 {
+  grid-column: span 3;
+}
+
+.col-4 {
+  grid-column: span 4;
+}
+
+.col-5 {
+  grid-column: span 5;
+}
+
+.col-6 {
+  grid-column: span 6;
+}
+
+.col-7 {
+  grid-column: span 7;
+}
+
+.col-8 {
+  grid-column: span 8;
+}
+
+.col-9 {
+  grid-column: span 9;
+}
+
+.col-10 {
+  grid-column: span 10;
+}
+
+.col-11 {
+  grid-column: span 11;
+}
+
+.col-12 {
+  grid-column: span 12;
 }
 
 .container {
-  width: 50%;
-  margin: 0 auto;
-  max-width: 720px; 
-  @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
-    width: 90%;
-  }
-  @media only screen and (min-device-width : 800px) and (max-device-width : 1024px) {
-    width: 70%;
-  }
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
 }
+
+.content {
+  grid-column: 1/13;
+  display: grid;
+  grid-template-columns: subgrid;
+}
+
+
