--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css">
+	<script type="text/javascript" src="https://livejs.com/live.js"></script>
 </head>
 
 <body>
