fixed books gallery

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-// Author: abdul raoof
+
 
 // ==========================================================================
 // Imports
@@ -432,10 +432,10 @@ blockquote {
 .readings_wrapper{
   display: grid;
   grid-template-columns: subgrid;
-  grid-column: 2 / 12;
+  grid-column: 3 / 11;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   .reading_link {
     text-decoration: none;
-    display: block;
     &:hover {
       text-decoration: none;
     }
@@ -445,21 +445,29 @@ blockquote {
 .reading 
 {
   padding: 1em;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   transition: background-color 0.2s ease;
   &:hover{
     background-color: #f5f5f5;
   }
   .thumbnail {
+    height: 180px;
     border-bottom: 1px solid #eaeaea;
     padding-bottom: 8px;
     display: flex;
-    align-items: flex-end;
+    align-items:end;
+    flex-shrink: 0;
     img {
+      width: 70%;
+      max-height: 100%;
+      object-fit: contain;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
   }
   &:hover .thumbnail img {
-    transform: scale(1.01);
+    transform: scale(1.05);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   }
   h1 {
