--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -1,4 +1,4 @@
-/* Grid system*/
+/* Grid system */
 
 $pad: 20px;
 
@@ -6,130 +6,94 @@ $pad: 20px;
   box-sizing: border-box;
 }
 
-// .grid {
-// background: white;
-// margin: 0 0 $pad 0;
-//   &:after {
-//   content: "";
-//   display: table;
-//   clear: both;
-//   }
-// }
-
-// [class*='col-'] {
-//   float: left;
-//   padding-right: $pad;
-//   .grid &:last-of-type {
-//     padding-right: 0;
-//   }
-// }
-
-
-// .col-2-3 {
-//   width: 66.66%;
-// }
-
-// .col-1-3 {
-//   width: 33.33%;
-// }
-
-// .col-1-2 {
-//   width: 50%;
-// }
-
-// .col-1-4 {
-//   width: 25%;
-// }
-
-// .col-1-8 {
-//   width: 12.5%;
-// }
-
-/* Opt-in outside padding */
-// .grid-pad {
-//   padding: $pad 0 $pad $pad;
-
-//   [class*='col-']:last-of-type {
-//     padding-right: $pad;
-//   }
-// }
-
-// .container {
-//   width: 50%;
-//   margin: 0 auto;
-//   max-width: 720px; 
-//   @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
-//     width: 90%;
-//   }
-//   @media only screen and (min-device-width : 800px) and (max-device-width : 1024px) {
-//     width: 70%;
-//   }
-// }
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 20px;
-}
-
-.col-1 {
-  grid-column: span 1;
-}
-
-.col-2 {
-  grid-column: span 2;
-}
-
-.col-3 {
-  grid-column: span 3;
-}
-
-.col-4 {
-  grid-column: span 4;
-}
-
-.col-5 {
-  grid-column: span 5;
-}
-
-.col-6 {
-  grid-column: span 6;
-}
-
-.col-7 {
-  grid-column: span 7;
-}
-
-.col-8 {
-  grid-column: span 8;
-}
-
-.col-9 {
-  grid-column: span 9;
-}
-
-.col-10 {
-  grid-column: span 10;
-}
-
-.col-11 {
-  grid-column: span 11;
-}
-
-.col-12 {
-  grid-column: span 12;
-}
-
+/* Base Grid Container */
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 20px;
+  gap: $pad;
 }
 
+/* Content Wrappers */
 .content {
-  grid-column: 1/13;
   display: grid;
   grid-template-columns: subgrid;
+  grid-column: 1 / -1;
 }
+
+/* Case Study Layout */
+.case_study_wrapper {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1 / -1;
+
+  .case_study_content {
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / -1;
+
+    // Default content alignment (columns 4-10)
+    h1, h2, h3, p, ul {
+      grid-column: 4 / 10;
+    }
+    video {
+      grid-column: 3 / 11;
+    }
+    section {
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-column: 1 / -1;
+
+      // Section content alignment
+      h1, h2, h3, p, ul {
+        grid-column: 4 / 10;
+      }
+
+      // Wider figure layout
+      figure {
+        grid-column: 3 / 11;
+      }
+    }
+  }
+}
+
+/* Readings Section */
+.readings_wrapper {
+  display: grid;
+  grid-column: 3 / 11;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: $pad;
+}
+
+/* Bio Section */
+.bio_wrapper {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1/-1;
+  .bio {
+    grid-column: 4 / 10;
+  }
+  .headshot {
+    grid-column: 3 / 4;
+  }  
+}
+
+.quotes_wrapper {
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-column: 1/-1;
+  blockquote {
+    grid-column: 4/10 ;
+  }
+}
+
+
+/* Global Element Positioning */
+h1, h2, h3, h4, h5,
+.works,
+footer,
+header {
+  grid-column: 4 / 10;
+}
+
 
 
