cleaning up variables

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,8 @@
-<nav role="navigation">
-    <ul>
-		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}selected{% endif %}">Home</a></li>
-        <li><a href="{{site.baseurl}}/works/" class="{% if page.url == '/works/' %}selected{% endif %}">Works</a></li>
- 		<li><a href="{{site.baseurl}}/reading/" class="{% if page.url == '/reading/' %}selected{% endif %}">Reading</a></li> 
-        <li><a href="{{site.baseurl}}/quotes" class="{% if page.url == '/quotes/' %}selected{% endif %}">Quotes</a></li>
-	</ul>
-</nav>	
-
+<nav role="navigation" class="primary_navigation">
+  <ul>
+    <li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}selected{% endif %}">Home</a></li>
+    <li><a href="{{site.baseurl}}/works/" class="{% if page.url == '/works/' %}selected{% endif %}">Works</a></li>
+    <li><a href="{{site.baseurl}}/reading/" class="{% if page.url == '/reading/' %}selected{% endif %}">Reading</a></li>
+    <li><a href="{{site.baseurl}}/quotes" class="{% if page.url == '/quotes/' %}selected{% endif %}">Quotes</a></li>
+  </ul>
+</nav>
