--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,10 +20,12 @@ $font-secondary: 'Merriweather Sans', sans-serif;
 $color-text-primary:rgba(51, 51, 51, 1);
 $color-text-secondary: rgba(25, 52, 65, 1);
 $color-text-muted: rgba(102, 102, 102, 1);
-$color-border: #eee;
-$color-border-accent: #333;
+$color-border-default: #eee;
+$color-border-subtle:#eee;
+$color-border-strong: #333;
 $color-background: #fff;
 $color-background-hover: #f5f5f5;
+
 
 // ==========================================================================
 // Base Styles
@@ -299,7 +301,7 @@ section {
 // Navigation
 // ==========================================================================
 
-nav {
+.primary_navigation {
   font-family: $font-secondary;
   padding: 2em 0 .75em 0;
   margin: 0 auto;
@@ -322,7 +324,7 @@ nav {
 
         &.selected {
           color: $color-text-primary;
-          border-bottom: 2px solid $color-border-accent;
+          border-bottom: 2px solid $color-border-strong;
           padding-bottom: 14px;
         }
       }
@@ -354,33 +356,12 @@ footer {
     width: 100%;
   }
 
-  border-top: 1px solid $color-border;
+  border-top: 1px solid $color-border-default;
   color: $color-text-primary;
 
   span {
     @extend small;
     font-weight: 400;
-  }
-
-  nav {
-    ul {
-      float: right;
-      padding: 0;
-
-      @media only screen and (min-device-width : 320px) and (max-device-width : 800px) {
-        float: none;
-        margin-bottom: 1.5em;
-      }
-
-      li {
-        padding: 0;
-
-        a {
-          @extend small;
-          color: $color-text-muted;
-        }
-      }
-    }
   }
 }
 
@@ -436,10 +417,9 @@ blockquote {
   }
 }
 
-.reading 
-{
+.reading {
   padding: 1em;
-  height: 100%;
+  // height: 100%;
   display: flex;
   flex-direction: column;
   transition: background-color 0.2s ease;
@@ -476,24 +456,4 @@ blockquote {
     font-size: 0.9rem;
     color: $color-text-secondary;
   }
-}
-
-// ==========================================================================
-// Helper Classes
-// ==========================================================================
-.margin-left-zero {
-  margin-left: 0;
-}
-
-.alternate-h2 {
-  font-weight: 700;
-}
-
-.hide {
-  display: none;
-}
-
-.article-end {
-  border-bottom: 4px double #eee;
-  border-top: solid 1px #eee;
 }
