--- a/_layouts/casestudy.html
+++ b/_layouts/casestudy.html
@@ -4,3 +4,23 @@ layout: default
 <div class="case_study_wrapper">
     {{ content }}
 </div>
+
+<!-- <h2>Other Works</h2>
+<section class="works {% if page.url == '/works/campaigns/' %}hide{% endif %}">
+    <h3>Campaigns for Exotel</h3>
+    <p class="lead">Empower the customers to drive growth and engagement.</p>
+    <p><a href="{{site.baseurl}}/works/campaigns/">Read the case study <i class="fa fa-long-arrow-right"
+                aria-hidden="true"></i></a></p>
+</section>
+<section class="works {% if page.url == '/works/console/' %}hide{% endif %}">
+    <h3>Console for Exotel</h3>
+    <p class="lead">Better tool for customer support operations.</p>
+    <p><a href="{{site.baseurl}}/works/console/">Read the case study <i class="fa fa-long-arrow-right"
+                aria-hidden="true"></i></a></p>
+</section>
+<section class="works {% if page.url == '/works/analytics/' %}hide{% endif %}">
+    <h3>Exotel Call Analytics</h3>
+    <p class="lead">Monitor, analyse and derive insights from voice communication data.</p>
+    <p><a href="{{site.baseurl}}/works/analytics/">Read the case study <i class="fa fa-long-arrow-right"
+                aria-hidden="true"></i></a></p>
+</section> -->
